axios and responsive mode added

--- a/src/components/video/video.module.css
+++ b/src/components/video/video.module.css
@@ -13,7 +13,7 @@
 .video {
   display: flex;
   align-items: center;
-  border: 1px solid lightblue;
+  border: 1px solid chocolate;
   cursor: pointer;
   transition: transform 250ms ease-in;
 }
