--- a/src/components/search/search.module.css
+++ b/src/components/search/search.module.css
@@ -1,8 +1,8 @@
 .search {
   color: white;
-  background-color: skyblue;
+  background-color: coral;
   text-align: center;
-  padding: 10px;
+  padding: 20px;
 }
 
 .logo {
