--- a/src/components/search/search.module.css
+++ b/src/components/search/search.module.css
@@ -1,21 +1,47 @@
 .search {
+  display: flex;
+  justify-content: center;
   color: white;
   background-color: coral;
   text-align: center;
   padding: 20px;
+  padding-top: 30px;
+  border-radius: 20px;
+}
+
+.title {
+  font-size: 40px;
+  font-weight: bold;
+  font-family: fantasy;
 }
 
 .logo {
-  font-size: 20px;
-  padding-right: 5px;
+  font-size: 40px;
+  padding-right: 10px;
+}
+
+.logo:hover {
+  color: lightpink;
+  cursor: pointer;
 }
 
 .input {
+  font-size: 15px;
   width: 500px;
-  height: 25px;
+  height: 40px;
+  border: none;
+  border-radius: 10px;
+  margin-top: 5px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .button {
-  font-size: 18px;
+  font-size: 25px;
+  color: coral;
   background-color: white;
+  border: none;
+  margin-top: 5px;
+  margin-bottom: 17px;
+  border-radius: 30%;
 }
