--- a/src/components/video/video.module.css
+++ b/src/components/video/video.module.css
@@ -13,7 +13,9 @@
 .video {
   display: flex;
   align-items: center;
+  height: 200px;
   border: 1px solid chocolate;
+  box-shadow: 2px 2px 3px coral;
   cursor: pointer;
   transition: transform 250ms ease-in;
 }
@@ -23,7 +25,7 @@
 }
 
 .thumbnail {
-  width: 40%;
+  width: 50%;
   height: 100%;
 }
 
@@ -34,9 +36,9 @@
 .title,
 .channel {
   margin: 0;
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
 
 .channel {
-  font-size: 0.6rem;
+  font-size: 0.8rem;
 }
